Fix line breaks in mobile version

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,6 +55,10 @@ body {
 	-webkit-text-size-adjust: none;
 }
 
+br {
+	display: block !important;
+}
+
 mark {
 	background-color: transparent;
 	color: inherit;
